<resources>
    <string name="app_name">Aprohirdetes</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Jelszó</string>
    <string name="phone_number">Telefonszám</string>
    <string name="nem_rendelkezik_fiokkal"><u>Nem rendelkezik még fiókkal? Regisztráljon!</u></string>
    <string name="rendelkezik_fiokkal"><u>Már rendelkezem fiókkal!</u></string>
    <string name="navigation_drawer_open">Navigáció megnyitása</string>
    <string name="navigation_drawer_close">Navigáció bezárása</string>
    <string name="title">Cím</string>
    <string name="description">Leírás</string>
    <string name="city">Település</string>
    <string name="price_in_HUF">Ár: %s Ft</string>
    <string name="price_in_HUF_only_price">%s Ft</string>

    <string-array name="categories">
        <item>Álláskeresés, állásajánlat</item>
        <item>Műszaki cikkek</item>
        <item>Sport, szabadidő</item>
        <item>Ruházat</item>
        <item>Üzlet, szolgáltatás</item>
        <item>Otthon, háztartás</item>
    </string-array>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="header_title">Apróhirdetés alkalmazás</string>
    <string name="category">kategória</string>
    <string name="price">Ár</string>
    <string name="remove">Töröl</string>
    <string name="modify">Módosít</string>
    <string name="register">Regisztrálok</string>
    <string name="full_name">Teljes név</string>
    <string name="registration">Regisztráció</string>
    <string name="new_ad">Új hirdetés</string>
    <string name="login">Belépek</string>
    <string name="log_in">Bejelentkezés</string>
    <string name="favoruite_ad_description">egy csillag a hirdetések mentésére</string>
    <string name="save">Mentés</string>
    <string name="modify_ad">Hirdetés módosítása</string>
    <string name="details">Részletek</string>
    <string name="ads">Hirdetések</string>
    <string name="my_ads">Hirdetéseim</string>
    <string name="favourites">Kedvenceim</string>
    <string name="log_out">Kijelentkezés</string>
    <string name="text_view_title">Cím:</string>
    <string name="text_view_price">Ár:</string>
    <string name="text_view_desc">Leírás:</string>
    <string name="text_view_date">Dátum:</string>
    <string name="text_view_city">Település:</string>
    <string name="text_view_email">E-mail:</string>
    <string name="text_view_phone_number">Telefonszám:</string>
    <string name="text_view_category">Kategória:</string>
    <string name="no_fav_ads">Jelenleg nincsenek kedvenc hirdetéseid!</string>
</resources>