<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/log_in" />

        <item android:id="@+id/nav_ads"
            android:icon="@drawable/ic_ads"
            android:title="@string/ads" />

        <item android:id="@+id/nav_my_ads"
            android:icon="@drawable/ic_my_ads"
            android:title="@string/my_ads" />

        <item android:id="@+id/nav_favourite_ads"
            android:icon="@drawable/ic_fav_ads"
            android:title="@string/favourites" />

        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>
</menu>