<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyAdActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ModifyAdActivity">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/modify_ad"
            android:textColor="#FF5722"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/modifyAdTitle"
            android:layout_width="298dp"
            android:layout_height="47dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:autofillHints="title"
            android:hint="@string/title"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.858"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/modifyAdDesc"
            android:layout_width="298dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:autofillHints="description"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="20"
            android:minLines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyAdTitle" />

        <EditText
            android:id="@+id/modifyAdPrice"
            android:layout_width="298dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:autofillHints="price"
            android:hint="@string/price"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyAdDesc" />

        <EditText
            android:id="@+id/modifyAdCity"
            android:layout_width="264dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:autofillHints="city"
            android:hint="@string/city"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyAdPrice" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_view_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/modifyAdTitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_view_desc"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/modifyAdDesc"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyAdTitle" />

        <Spinner
            android:id="@+id/modifyAdSpinner"
            android:layout_width="264dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyAdCity" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_view_price"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/modifyAdPrice"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyAdDesc" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_view_city"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/modifyAdCity"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyAdPrice" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_view_category"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/modifyAdSpinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyAdCity" />

        <Button
            android:id="@+id/saveModificationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#FF5722"
            android:text="@string/modify"
            android:textColor="#ECECEC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyAdSpinner" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>