<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAdActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".NewAdActivity">

        <EditText
            android:id="@+id/titleText"
            android:layout_width="306dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:autofillHints="Cím"
            android:hint="@string/title"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="306dp"
            android:layout_height="158dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Leírás"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="20"
            android:minLines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <EditText
            android:id="@+id/cityText"
            android:layout_width="306dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:autofillHints="Település"
            android:hint="@string/city"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceNumber" />

        <EditText
            android:id="@+id/priceNumber"
            android:layout_width="306dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Ár"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="307dp"
            android:layout_height="27dp"
            android:layout_marginTop="16dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityText" />

        <Button
            android:id="@+id/saveNewAdButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
